[package]
name = "tcperf"
version = "0.1.0"
edition = "2021"


[[bin]]
name="learn"
path="learn/learn.rs"

[dependencies]
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = { version = "0.1"  }
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
bytes = "1.0.0"
futures = { version = "0.3.0", features = ["thread-pool"]}
clap = { version="4.3.8", features = ["derive"] }
dashmap = "5.4.0"
anyhow = "1.0.73"
ratatui = "0.22.0"
log4rs = "1.2.0"
log = "0.4.20"


